@@ -108,3 +108,5 @@
   Also tests, documentation, PP.
 
 - documentation and tests for sqrtint
+
+- tests for ramanujan primes, PP impl
