@@ -81,6 +81,7 @@
 #define FUNC_is_perfect_square
 #define FUNC_next_prime_in_sieve 1
 #define FUNC_prev_prime_in_sieve 1
+#define FUNC_is_prime_in_sieve 1
 #include "util.h"
 #include "sieve.h"
 #include "primality.h"
@@ -1061,6 +1062,29 @@ UV nth_twin_prime_approx(UV n)
   }
   return lo;
 }
+
+
+/* Return array of first n ramanujan primes.  Use Noe's algorithm */
+UV* ramanujan_primes(UV n) {
+  UV max, k, s, *L;
+  unsigned char* sieve;
+  /* Axler 2013, proposition 4.34:  Rn <= nthprime(tn), t > 48/19 */
+  max = nth_prime_upper(48*n/19);
+  if (_XS_get_verbose() >= 2) printf("sieving to %"UVuf" for first %"UVuf" Ramanujan primes\n", max, n);
+  s = 0;
+  sieve = sieve_erat30(max);
+  Newz(0, L, n, UV);
+  L[0] = 2;
+  for (k = 7; k <= max; k += 2) {
+    if (is_prime_in_sieve(sieve, k)) s++;
+    if (s < n) L[s] = k+1;
+    if ((k & 3) == 1 && is_prime_in_sieve(sieve, (k+1)>>1)) s--;
+    if (s < n) L[s] = k+2;
+  }
+  Safefree(sieve);
+  return L;
+}
+
 
 
 /* Return a char array with lo-hi+1 elements. mu[k-lo] = µ(k) for k = lo .. hi.
