@@ -24,6 +24,7 @@ extern UV  twin_prime_count(UV low, UV high);
 extern UV  twin_prime_count_approx(UV n);
 extern UV  nth_twin_prime(UV n);
 extern UV  nth_twin_prime_approx(UV n);
+extern UV* ramanujan_primes(UV n);
 
 extern int powerof(UV n);
 extern int is_power(UV n, UV a);
